kubernetes/apps/security/keycloak/app/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
  name: keycloak-admin
  namespace: security
spec:
  ingressClassName: internal
  rules:
    - host: keycloak-admin.renait.nl
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
